Anexo CRUD y camio en indexjs en restricciones de usuarios linea 36-37

--- a/Registro.ejs
+++ b/Registro.ejs
@@ -10,7 +10,7 @@
 </head>
 <body id="body">
     <div class="container" >
-        <form id="/vistas" method="post">
+        <form id="/vistas" method="post" action="/save">
         <div class="row g-1">
             <div class="col " id="colum_1">
                 <h2 class="text-center">Resgistrate en el Formulario de Integración​
