Acualizacion css / ejscrud

--- a/crud.ejs
+++ b/crud.ejs
@@ -46,9 +46,9 @@
                     <tbody>
 
                         <tr>
-                            <td>
-                                <a href="#" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                                <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                            <td id="actions">
+                                <a id="Edit"href="#" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                                <a id="Delete" href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                             </td>
                         </tr>      
 
