--- a/crud.ejs
+++ b/crud.ejs
@@ -68,6 +68,7 @@
                 </div>
             </div>
         </div>        
-    </div>     
+    </div>    
+    <script src="./JAVASCRIPT/crud.js"></script> 
 </body>
 </html>
