--- a/crud.ejs
+++ b/crud.ejs
@@ -21,8 +21,8 @@
                         <div class="col-sm-8"><h2>Detalles <b>De Registro</b></h2></div>
                         <div class="col-sm-4">
                             <div class="search-box">
-                                <i class="material-icons">&#xE8B6;</i>
-                                <input type="text" class="form-control" placeholder="Search&hellip;">
+                                <i id="lista-elementos" class="material-icons">&#xE8B6;</i>
+                                <input id="Search" type="text" class="form-control" placeholder="Search&hellip;">
                             </div>
                         </div>
                     </div>
