--- a/crud.ejs
+++ b/crud.ejs
@@ -47,8 +47,10 @@
 
                         <tr>
                             <td id="actions">
-                                <a id="Edit"href="#" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                                <a id="Delete" href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                                <div id="buttonContainer">
+                                    <button id="editarBtn" type="button" class="btn btn-primary btn-sm ">Editar</button>
+                                    <button id="eliminarBtn" type="button" class="btn btn-danger btn-sm">Eliminar</button>
+                                </div>
                             </td>
                         </tr>      
 
