--- a/CRUDCSS/crud.css
+++ b/CRUDCSS/crud.css
@@ -120,3 +120,13 @@ body{ color: #566787;
 #Edit{
     color: #03A9F4;
 }
+
+#buttonContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#eliminarBtn{
+    margin-left: 5px;
+}
